<resources>
    <string name="app_name">Hotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="clear">clear</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="logout">Logout</string>
    <string name="welcome_new_member">Selamat Bergabung bersama IUVENIS FORTIS Club</string>
    <string name="lanjutkan">continue</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2Frc3BhcmkiLCJhIjoiY2t1a3FpNzJ5MXQ1eDJ2dDRvMGNoZ2IwYSJ9.-1dSPyQvfQ1RKan5yzfO5Q</string>
    <string name="welcome_traveler">Welcome Traveler</string>
    <string name="what_doin">What\'ca doin?</string>
    <string name="booking">Book Now!</string>
    <string name="room_name">Nama Kamar</string>
    <string name="hotel_name">IUVENIS FORTIS HOTEL</string>
    <string name="review">Review:</string>
    <string name="submit">SUBMIT</string>
    <string name="review_now">Review Now!</string>
    <string name="desc_app">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="about_us_desc">IUIVENIS FORTIS merupakan sebuah aplikasi android yang bergerak dibidang pelayanan jasa kamar hotel. Aplikasi ini memberi kemudahan pada pengguna dalam mengakses pelayanan hotel UIVENIS FORTIS. Dengan menggunakan aplikasi ini, pengguna dapat melakukan booking kamar, Check In dan Check Out, melihat data kamar yang tersedia, dan melakukan review terhadap kamar hotel tersebut dengan mudah, kapan saja dan dimana saja.</string>
</resources>